<resources>
    <string name="app_name">SMSbyT</string>
    <string name="next">Dalej</string>
    <string name="previous">Powrót</string>
    <string name="finish">Zakończ</string>
    <string name="close">Zamknij</string>
    <!-- MAIN -->
    <string name="main_reset">Skonfiguruj ponownie</string>
    <string name="main_reset_dialog_title">Resetowanie konfiguracji</string>
    <string name="main_reset_dialog_message">Wszystko poprzednie ustawienia zostaną wyczyszczone. Konfiguracji nie będzie można przywrócić.</string>
    <string name="main_reset_dialog_button">Resetuj</string>
    <!-- SMS -->
    <string name="sms_title">Uprawnienia dla SMS</string>
    <string name="sms_permissions">Przydziel uprawnienia</string>
    <string name="sms_show_settings">Pokaż Ustawienia</string>
    <string name="sms_no_permissions_title">Brak uprawnień</string>
    <string name="sms_no_permissions_message">Aby korzystać z aplikacji, przyznane muszą być uprawnienia do odczytu wiadomości SMS. Przejdź do Ustawień, aby przyznać powyższe uprawnienia.</string>
    <string name="sms_rationale_title">Brak uprawnień</string>
    <string name="sms_rationale_message">Uprawnienia do odczytu nie zostały przyznane.</string>
    <!-- CHANNEL -->
    <string name="channel_title">Nazwa kanału</string>
    <string name="channel_open_conversation">Otwórz rozmowę</string>
    <string name="channel_name_incorrect">Nazwa kanału jest nieprawidłowa!</string><!-- CHANNEL -->
    <!-- USER -->
    <string name="user_title">Nazwa kanału</string>
    <string name="user_name_incorrect">Nazwa użytkownika jest nieprawidłowa!</string>
    <string name="user_no_conversation">Brak rozpoczętej konwersacji z Botem!</string>
    <!-- TEST -->
    <string name="test_title">Testowanie połączenia</string>
    <string name="test_start">Wyślij wiadomość testową</string>
    <string name="test_message_sent">Wiadomość została wysłana. Sprawdź kanał w komunikatorze.</string>
    <string name="test_message_failed">Nie udało się wysłać. Spróbuj ponownie.</string>
    <string name="message_content">*Nadawca*: %1$s,\n*Treść*: `%2$s`</string>
</resources>
