<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/channelImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_marginRight="@dimen/margin_small"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/channelConversation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_small" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/channelConversation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_open_conversation"
        android:layout_marginRight="@dimen/margin_big"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_big"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_big"
        app:layout_constraintBottom_toTopOf="@+id/channelDots" />

    <LinearLayout
        android:id="@+id/channelDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/margin_small"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_big"
        app:layout_constraintBottom_toTopOf="@+id/channelBottom">

        <ImageView
            android:layout_width="@dimen/dot_size"
            android:layout_height="@dimen/dot_size"
            android:src="@drawable/dot_filled"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/dot_size"
            android:layout_height="@dimen/dot_size"
            android:src="@drawable/dot_filled"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/dot_size"
            android:layout_height="@dimen/dot_size"
            android:src="@drawable/dot_empty"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/dot_size"
            android:layout_height="@dimen/dot_size"
            android:src="@drawable/dot_empty"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/channelBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/channelPrev"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="start|center_vertical"
            android:text="@string/previous"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/channelNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:gravity="end|center_vertical"
            android:text="@string/next"
            android:textColor="@color/button_text" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>